--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "raug-cahet-codron",
-  "version": "0.0.4",
+  "version": "1.0.0",
   "author": "fdoganis",
   "license": "MIT",
   "type": "module",
@@ -12,17 +12,18 @@
     "purge": "npm run clean && rm -rf node_modules",
     "serve": "http-server dist",
     "cloud": "cloudflared --url http://localhost:5173/",
-    "deploy": "gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "devDependencies": {
     "@types/three": "^0.169.0",
+    "gh-pages": "^6.0.0",
     "http-server": "^14.1.1",
+    "terser": "^5.36.0",
     "vite": "^5.4.1",
     "vite-plugin-glsl": "^1.3.0",
     "vite-plugin-static-copy": "^1.0.6"
   },
   "dependencies": {
-    "gh-pages": "^6.2.0",
     "three": "^0.169.0"
   }
 }
